[package]
name = "nss-quarry"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive"] }
duckdb = { version = "1.2", features = ["bundled"] }
openidconnect = "4.0"
rand = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
